# laika-studio

./: .gitignore  .gitmodules  CMakeCache.txt  README.md  setup.sh
LaikaStudio-Debug/: CMakeCache.txt  cmake_install.cmake  qtcsettings.cmake
LaikaStudio-Debug/.qt/: .qmlls.build.ini.part  QtDeploySupport.cmake  QtDeployTargets.cmake  appLaikaStudio_qml.cmake  appLaikaStudio_res.cmake
LaikaStudio-Debug/.qt/deploy_qml_imports/: appLaikaStudio.cmake
LaikaStudio-Debug/.qt/qml_imports/: appLaikaStudio_build.rsp  appLaikaStudio_conf.cmake  appLaikaStudio_conf.rsp
LaikaStudio-Debug/.qt/rcc/: appLaikaStudio_raw_qml_0.qrc  qmake_LaikaStudio.qrc
LaikaStudio-Debug/.rcc/qmlcache/: all_aotstats.aotstatslist  appLaikaStudio_qml_loader_file_list.rsp  module_appLaikaStudio.aotstatslist
LaikaStudio-Debug/.rcc/qmllint/: appLaikaStudio.rsp  appLaikaStudio_json.rsp  appLaikaStudio_module.rsp
LaikaStudio-Debug/LaikaStudio/: appLaikaStudio_qml_module_dir_map.qrc  qmldir
LaikaStudio-Debug/appLaikaStudio.app/Contents/: Info.plist
LaikaStudio-Debug/qmltypes/: appLaikaStudio_foreign_types.txt
src/: CMakeLists.txt  Color.cpp  Color.h  LaikaStudio.qmlproject  LaikaStudio.qmlproject.qtds  Main.qml  MainWindow.cpp  MainWindow.h  MainWindow.ui  Viewport.qml  main.cpp  qds.cmake  qtquickcontrols2.conf  resources.qrc
src/App/autogen/: environment.h
src/LaikaStudio/: CMakeLists.txt  Constants.qml  qmldir
src/LaikaStudio/designer/: plugin.metainfo
src/LaikaStudioContent/: App.qml  CMakeLists.txt  Screen01.ui.qml
src/lib/LaikaCommon/: Button.qml  CMakeLists.txt  CheckBox.qml  Switch.qml  Theme.qml  ThemeDemo.qml  laika-common.h
